# slang-backend

./: .env  .gitignore  Cargo.toml  Dockerfile  README.md  backend.py  log_config.ini  pyproject.toml  schema.txt  socket_test.py  uvicorn_log.ini
docs/: index.md  users.md
migrations/2024-01-31-232614_create_messenger/: up.sql
slang_backend/: __init__.py  apihandler.py  dbhandler.py  models.py  slang_socket.py  sockethandler.py
slang_backend/util/: logsys.py
sql_migrations/: slangdb-dropall.sql  slangdb-migrations.sql
tests/: __init__.py
