[tool.poetry]
name = "slang-backend"
version = "0.1.0"
license = "Apache-2.0"
description = "Backend for Slang"
authors = ["Surge <esfloyd9341@gmail.com>"]
readme = "README.md"
homepage = "https://slang.animus-surge.space"

[tool.poetry.dependencies]
python = "^3.11"
psycopg = "^3.1"
websockets = "^12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
